[package]
name = "pathplanning"
version = "0.1.2"
authors = ["Travis Sturzl <tsturzl@lefthandrobotics.com>"]
edition = "2018"

[profile.release]
lto = true

[[bench]]
name = "all"
harness = false

[dev-dependencies]
criterion = "0.3"

[dependencies]
geo = "0.18.0"
rand = "0.5.0"
geo-offset = "0.3.0"
rayon = "1.5.3"
rstar = "0.9.3"
